# Framework-e-learning-platform

./: Cargo.toml  LICENSE  README.md
LICENSES/: actix-cors.txt  actix_web.txt  argon2.txt  dotenv.txt  jsonschema.txt  mongodb.txt  utoipa.txt  uuid.txt
assets/: roles.drawio  user_management_simple.drawio  user_permission.drawio
migrations/2023-07-21-093702_create_users/: down.sql  up.sql
migrations/2023-07-31-125636_ressources/: down.sql  up.sql
migrations/2023-07-31-132353_roles/: up.sql
migrations/2023-07-31-132509_role_permissions/: up.sql
migrations/2023-07-31-132701_groups/: up.sql
migrations/2023-07-31-133050_group_members/: down.sql  up.sql
migrations/2023-07-31-134126_user_permissions/: down.sql  up.sql
migrations/2023-07-32-126333_access_types/: down.sql  up.sql
migrations/2023-07-32-126335_user_access_types/: down.sql  up.sql
migrations/2023-07-32-126336_role_access_types/: down.sql  up.sql
migrations/2023-11-21-105632_task_packages/: down.sql  up.sql
migrations/2023-11-22-101458_tasks/: up.sql
migrations/2023-11-25-095530_solution_attempts/: down.sql  up.sql
migrations/2023-11-25-095536_answers/: down.sql  up.sql
migrations/2023-12-20-081741_ressource_access_types/: down.sql  up.sql
migrations/2023-12-22-142250_group_ancestors/: down.sql  up.sql
src/: config.rs  jwt.rs  main.rs  permission.rs  permission_config.rs  schema.rs
src/assets/: Permission.toml
src/docs/: answer_docs.rs  auth_docs.rs  docs.rs  groups_docs.rs  member_docs.rs  mod.rs  permission_docs.rs  solution_attempts_docs.rs  task_docs.rs  user_docs.rs  (+1 more)
(+117 files in other folders)
