[package]
name = "backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.174", features = ["derive"]}
serde_json = "1.0.103"
utoipa = { version = "4", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web", "debug-embed"] }
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
argon2 = "0.5.1"
rand_core = { version = "0.6.4", features = ["std"] }
jsonwebtoken = "8.3.0"
serial_test = "2.0.0"
toml = "0.8.2"
actix-cors = "0.6.4"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
jsonschema = "0.17.1"
itertools = "0.12.0"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["tokio-runtime"]


